# my-kaggle-notebooks

./: .gitignore  AGENTS.md  CLAUDE.md  draft-05-xgboost-kaggle.ipynb  main.py  pyproject.toml
dump/: .gitignore
notebooks/2026-03-06-fraud-detection-cpe232-data-models/: data.md  frd232-01-manual-ml.ipynb  frd232-02-catboost-kaggle.ipynb  frd232-02-catboost-manual.ipynb  frd232-03-xgboost-kaggle.ipynb  frd232-03-xgboost-local.ipynb  frd232-04-xgboost-final.ipynb  frd232-05-xgboost-blend.ipynb  frd232-06-robust-ensemble-timecv.ipynb  overview.md
notebooks/2026-03-08-titanic-passenger-survival/: data.md  overview.md  titnic-01-eda-and-modeling.ipynb  titnic-02-catboost-features.ipynb  titnic-03-catboost-tuned.ipynb
notebooks/2026-03-13-insurance-premium-prediction/: data.md  ins232-01-gpu-fast-cv.ipynb  (+8 more)
notebooks/2026-03-14-mini-hackathon-form-data-to-insight/: data-insight-household-income-thailand.ipynb  data.md  fmdins-01-baseline-kaggle.ipynb  fmdins-01-household-income-thailand.ipynb  fmdins-02-household-income-storytelling.ipynb  fmdins.ipynb  main.py  overview.md  pyproject.toml
notebooks/2026-03-27-super-ai-engineer-s6-fahmai-rag-challenge-level-1/: data.md  fahrag-01-baseline-rag.ipynb  main.py  markdown-parser.ipynb  overview.md  pyproject.toml
notebooks/2026-03-27-super-ai-engineer-s6-fahmai-rag-challenge-level-1/notebooks/bm25/: rag-v1-bm25.ipynb
notebooks/2026-03-27-super-ai-engineer-s6-fahmai-rag-challenge-level-1/notebooks/pinecone/: embed_markdown_to_pinecone.ipynb  list_indexes.ipynb
notebooks/2026-03-27-super-ai-engineer-s6-fahmai-rag-challenge-level-1/notebooks/rag/: v01-pinecone-thaillm-judge.ipynb  v02-pinecone-thaillm-judge.ipynb
notebooks/2026-03-27-super-ai-engineer-s6-fahmai-rag-challenge-level-1/notebooks/rag/outputs/: debug_thaillm_v02.csv  submission_thaillm_v02.csv
notebooks/2026-03-27-super-ai-engineer-s6-fahmai-rag-challenge-level-1/testing/: markdown-rag-splitting.ipynb
testings/: main.py  pyproject.toml
(+25 files in other folders)
