[project]
name = "fmdins-comp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.0",
    "ipython>=8.30.0",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=4.2.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "seaborn>=0.13.2",
]
