[project]
name = "2026-03-27-super-ai-engineer-s6-fahmai-rag-challenge-level-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "markdown-it-py>=3.0.0",
    "markdown>=3.8",
    "marko>=2.2.0",
    "mdit-py-plugins>=0.5.0",
    "openai>=2.30.0",
    "pandas>=2.3.0",
    "pinecone>=8.1.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "tabulate>=0.9.0",
]
